--- a/DoodleSpace/style.css
+++ b/DoodleSpace/style.css
@@ -7,6 +7,18 @@ h1 {
     text-align: center;
 }
 
+p {
+    margin: 0px;
+}
+
+button {
+    cursor: pointer;
+    display: block;
+    margin: auto;
+    width: 80px;
+    height: 40px;
+}
+
 .ui_box {
     max-width: 1200px;
     display: block;
@@ -14,8 +26,52 @@ h1 {
     margin-right: auto;
 }
 
+.ui_block {
+    display: inline-block;
+    width: 25%;
+}
+
+.game_area {
+    position: relative;
+    display: block;
+    width: 1200px;
+    height: 900px;
+    margin: 0 auto 0 auto;
+}
+
 .canvas {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
+    height: 100%;
+}
+
+.start_screen {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.game_over_screen {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.inviasble {
+    display: none;
+}
+
+.viasble {
+    display: flex;
 }
