--- a/DoodleSpace/style.css
+++ b/DoodleSpace/style.css
@@ -47,6 +47,7 @@ button {
 
 .start_screen {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     position: absolute;
